--- a/wp-content/themes/schlemmer/css/scss/home-sections/_section-five.scss
+++ b/wp-content/themes/schlemmer/css/scss/home-sections/_section-five.scss
@@ -2,6 +2,7 @@
 	width:100%;
 	background: url(#{$themePath}images/wavy_line_patterns.jpg) top left repeat;
 	padding-bottom: 240px;
+	overflow: hidden;
 }
 
 
