--- a/wp-content/themes/schlemmer/css/scss/style.scss
+++ b/wp-content/themes/schlemmer/css/scss/style.scss
@@ -9,7 +9,7 @@
 				"slick",
 				"reset",
 				"global",
-				"sticky_header",
+				"header",
 				"nav",
 				"home-sections/section-one",
 				"home-sections/section-two",
