--- a/wp-content/themes/schlemmer/css/scss/home-sections/_section-one.scss
+++ b/wp-content/themes/schlemmer/css/scss/home-sections/_section-one.scss
@@ -4,6 +4,8 @@
 }
 
 
+
+
 .section_left {
 	background: url(#{$themePath}images/hero-desktop.jpg) top center no-repeat;
 	background-size: cover;
@@ -293,7 +295,7 @@ span.get_started_button {
 	
 	
 	#section_one {
-		margin:107px 0 0 0;
+		// margin:0px 0 0 0;
 	}
 	
 	a.logo {
@@ -332,7 +334,7 @@ span.get_started_button {
 	
 	
 	#section_one {
-    margin: 80px 0 0 0;
+    // margin: 80px 0 0 0;
 	}
 	
 	
@@ -348,6 +350,7 @@ span.get_started_button {
 	.section_left {
 		padding-bottom: 0;
 		min-height: 529px;
+		background-size:cover;
 	}
 	
 	
