--- a/wp-content/themes/schlemmer/css/scss/style.scss
+++ b/wp-content/themes/schlemmer/css/scss/style.scss
@@ -17,6 +17,7 @@
 				"home-sections/section-four",
 				"home-sections/section-five",
 				"home-sections/section-six",
+				"page-default",
 				"footer",
 				"animations";
 
