--- a/wp-content/themes/schlemmer/css/scss/home-sections/_section-two.scss
+++ b/wp-content/themes/schlemmer/css/scss/home-sections/_section-two.scss
@@ -39,13 +39,13 @@
 
 
 .section_two_content {
-	
 	margin:82px 0 0 0;
 	width:51%;
 	padding-left:64px;
 	padding-right:7%;
 	float:left;
 	width:52%;
+	color:#fff;
 	p:first-of-type:first-letter{
 		font-family: $questrabold;
     font-size: 127px;
