--- a/wp-content/themes/schlemmer/css/scss/_global.scss
+++ b/wp-content/themes/schlemmer/css/scss/_global.scss
@@ -29,12 +29,37 @@ img.aligncenter {
 
 
 .content {
-	color:#fff;
+	color:$bluedark;
 	font-family: $gothicbook;
 	font-size:18px;
 	line-height: 36px;
 	p, ul {
 		margin-bottom:35px;
+	}
+	ul {
+		margin-top:28px;
+		margin-left:63px;
+		li {
+			background:url(images/dot.png) no-repeat scroll 0 10px;
+			list-style: none;
+			padding: 0 0 0 30px;
+			margin-bottom:10px;
+		}
+	}
+	ol {
+		margin-left:85px;
+		li {
+			margin-bottom:10px
+		}
+	}
+	h1 {
+		font-family: $questrabold;
+		color:#000;
+		font-size: 60px;
+		line-height: 70px;
+		padding-bottom:35px;
+		border-bottom: 5px solid $bluelight;
+		margin-bottom:40px;
 	}
 	h2 {
 		color:$bluelight;
@@ -42,10 +67,40 @@ img.aligncenter {
 		font-weight: 300;
 		font-style: normal;
 		display: block;
-		padding:14px 0 5px;
+		padding: 14px 0 9px;
 		line-height: 39px;
 		font-family:$questrabold;
 	}
+	a {
+		color:$bluelight;
+		transition: all .2s ease-in-out;
+		text-decoration: none;
+		&:hover {
+			color:#9e9e9e;
+		}
+	}
+	blockquote {
+		font-family: $questrabold;
+		color:#000;
+		font-size:50px;
+		line-height: 54px;
+		margin:80px 0;
+		display: block;
+		padding:0 50px 0 75px;
+		position: relative;
+		&:before {
+			content:"";
+			display:block;
+			width:27px;
+			height:3px;
+			background: $bluelight;
+			transform: rotate(-60deg);
+			position: absolute;
+			top:23px;
+			left:35px;
+		}
+	}
+	
 }
 
 
