--- a/wp-content/themes/schlemmer/css/scss/_page-default.scss
+++ b/wp-content/themes/schlemmer/css/scss/_page-default.scss
@@ -19,8 +19,8 @@
 
 
 .innner_default {
-	padding:80px 0;
-	max-width:1660px;
+	padding: 80px 0 214px;
+	max-width:1600px;
 	margin-left:auto;
 	margin-right:auto;
 	&:after {
@@ -33,7 +33,7 @@
 
 .sidebar {
 	float:left;
-	width:475px;
+	width:455px;
 }
 
 
@@ -95,7 +95,7 @@ span.sidebar_title {
 				> a {
 					border-top:1px solid #9e9e9e;
 					display: block;
-					padding:24px 68px 24px 30px;
+					padding:27px 68px 21px 30px;
 					transition: all 500ms linear;
 				}
 				> a.active {
@@ -137,3 +137,17 @@ span.sidebar_title {
 		}
 	}
 }
+
+
+
+.content_wrapper {
+	float:right;
+	width:calc(100% - 455px);
+	padding:0 0 0 14%;
+}
+
+
+
+
+
+
