--- a/wp-content/themes/schlemmer/css/scss/home-sections/_section-three.scss
+++ b/wp-content/themes/schlemmer/css/scss/home-sections/_section-three.scss
@@ -158,6 +158,21 @@ svg#brooklyn {
 } /* Media Query */
 
 
+@media screen and (max-width: 1375px) {
+	
+	
+	
+	.sec_three_content {
+		h2 {
+			font-size: 35px;
+		}
+	}
+	
+	
+	
+} /* Media Query */
+
+
 @media screen and (max-width: 1250px) {
 	
 	#section_three {
