--- a/wp-content/themes/schlemmer/css/scss/_page-default.scss
+++ b/wp-content/themes/schlemmer/css/scss/_page-default.scss
@@ -18,9 +18,9 @@
 
 
 
-.innner_default {
-	padding: 80px 0 214px;
-	max-width:1600px;
+.inner_default {
+	padding: 80px 70px 214px;
+	max-width:1740px;
 	margin-left:auto;
 	margin-right:auto;
 	&:after {
@@ -148,6 +148,136 @@ span.sidebar_title {
 
 
 
+@media screen and (max-width: 1450px) {
+	
+	
+	
+.content_wrapper {
+	padding:0 0 0 7%;
+}
+	
+	
+	
+} /* Media Query */
+
+
+@media screen and (max-width: 1250px) {
+
+
+
+
+.banner {
+	height: 262px;
+	span.banner_title {
+		font-size: 40px;
+		letter-spacing: 15px;
+	
+	}
+}
+
+
+
+/*
+.inner_default {
+		padding: 80px 70px 260px;
+	}
+*/
+
+
+.inner_default {
+	padding: 80px 49px 214px;
+	max-width:1740px;
+	margin-left:auto;
+	margin-right:auto;
+}
+
+	
+	
+.sidebar {
+	width:420px;
+	span.sidebar_title {
+		margin-bottom: 24px;
+	}
+}
+
+
+.content_wrapper {
+	width:calc(100% - 420px);
+	padding:0 0 0 5%;
+}
+	
+	
+	
+	
+} /* Media Query */
+
+
+
+@media screen and (max-width: 1060px) {
+	
+	
+	
+	.banner {
+		display: none;
+	}
+	
+	
+	.inner_default {
+		display: flex;
+		flex-direction: column;
+		padding: 70px 53px 260px;
+	}
+	
+	
+.sidebar {
+	float:none;
+	width:100%;
+	order:1;
+	margin:60px 0 0;
+	padding-top:60px;
+	border-top:4px solid $bluelight;
+	
+}
+
+
+.content_wrapper {
+	width:100%;
+	float:none;
+	padding:0 0 0 0%;
+	order:0;
+}
+	
+	
+	
+	
+} /* Media Query */
+
+
+
+@media screen and (max-width: 767px) {
+	
+	
+	.inner_default {
+		padding: 70px 26px 147px;
+	}
+	
+	
+	
+	
+	.sidebar {
+		margin: 24px 0 0;
+		padding-top: 49px;
+	}
+	
+	.inner_default {
+		padding-left:26px;
+		padding-right:26px;
+		padding-top: 33px;
+	}
+	
+	
+	
+} /* Media Query */
 
 
 
