--- a/wp-content/themes/schlemmer/css/scss/_footer.scss
+++ b/wp-content/themes/schlemmer/css/scss/_footer.scss
@@ -317,7 +317,7 @@ body:not(.page-template-page-home ) {
 				fill:#000;
 			}
 			.brooklyn-cls-2{
-				fill:#51c4fc;
+				fill:#fff;
 			}
 			.brooklyn-cls-3{
 				fill:#000;
