--- a/wp-content/themes/schlemmer/css/scss/style.scss
+++ b/wp-content/themes/schlemmer/css/scss/style.scss
@@ -18,6 +18,7 @@
 				"home-sections/section-five",
 				"home-sections/section-six",
 				"page-default",
+				"page-practiceareas",
 				"footer",
 				"animations";
 
