--- a/wp-content/themes/schlemmer/css/scss/_global.scss
+++ b/wp-content/themes/schlemmer/css/scss/_global.scss
@@ -104,6 +104,24 @@ img.aligncenter {
 }
 
 
+
+body:not(.page-template-page-home), body:not(.page-template-default) {
+	
+
+		#sticky_menu {
+			 box-shadow: 4px 0px 18.9px 2.1px rgba(0, 0, 0, 0.26);
+		
+		}
+
+
+}
+
+
+
+
+
+
+
 @media screen and (max-width: 1375px) {
 	
 	.content {
