--- a/wp-content/themes/schlemmer/css/scss/_footer.scss
+++ b/wp-content/themes/schlemmer/css/scss/_footer.scss
@@ -1234,7 +1234,9 @@ span.address_header {
 	}
 	input[type="submit"] {
 		margin-top: 10px;
-		padding: 22px 125px 17px;
+			padding: 22px 0px 17px;
+		width:100%;
+		text-align: center;
 		&:hover {
 			
 		}
@@ -1338,7 +1340,9 @@ body:not(.page-template-page-home) {
 			}
 			input[type="submit"] {
 				margin-top: 8px;
-				padding: 25px 125px 17px;
+				padding: 22px 0px 17px;
+		width:100%;
+		text-align: center;
 				&:hover {
 			
 				}
