--- a/wp-content/themes/schlemmer/css/scss/style.scss
+++ b/wp-content/themes/schlemmer/css/scss/style.scss
@@ -19,6 +19,7 @@
 				"home-sections/section-six",
 				"page-default",
 				"page-practiceareas",
+				"page-bio",
 				"footer",
 				"animations";
 
