--- a/wp-content/themes/schlemmer/css/scss/_footer.scss
+++ b/wp-content/themes/schlemmer/css/scss/_footer.scss
@@ -1268,6 +1268,8 @@ body:not(.page-template-page-home) {
 	
 	.address_image {
 		padding-bottom: 80px;
+		padding-left: 25px;
+    padding-right: 25px;
 		svg#brooklyn {
 			width:175px;
 			height:175px;
@@ -1276,6 +1278,8 @@ body:not(.page-template-page-home) {
 		}
 		.form_wrapper {
 			margin: 81px auto 0;
+			padding-left:0;
+			padding-right:0;
 			span.footer_form_title {
 				font-size: 80px;
 				line-height: 78px;
@@ -1361,7 +1365,10 @@ body:not(.page-template-page-home) {
 
 
 
-
+.copyright {
+  padding-left:20px;
+  padding-right:20px;
+}
 
 
 
