--- a/wp-content/themes/schlemmer/css/scss/_global.scss
+++ b/wp-content/themes/schlemmer/css/scss/_global.scss
@@ -201,7 +201,8 @@ img.aligncenter {
 	   
     }
     h2 {
-	    
+	    font-size:30px;
+	    line-height: 35px;
     }
     blockquote {
 	    font-size:38px;
