--- a/wp-content/themes/schlemmer/css/scss/_global.scss
+++ b/wp-content/themes/schlemmer/css/scss/_global.scss
@@ -75,6 +75,7 @@ img.aligncenter {
 		padding: 14px 0 9px;
 		line-height: 39px;
 		font-family:$questrabold;
+		
 	}
 	a {
 		color:$bluelight;
@@ -82,6 +83,12 @@ img.aligncenter {
 		text-decoration: none;
 		&:hover {
 			color:#9e9e9e;
+		}
+		h2 {
+			transition: all .2s ease-in-out;
+			&:hover {
+				color:#9e9e9e;
+			}
 		}
 	}
 	blockquote {
@@ -113,7 +120,7 @@ img.aligncenter {
 body:not(.page-template-page-home), body:not(.page-template-default) {
 	
 
-		#sticky_menu {
+		header {
 			 box-shadow: 4px 0px 18.9px 2.1px rgba(0, 0, 0, 0.26);
 		
 		}
