--- a/wp-content/themes/schlemmer/css/scss/_page-blog.scss
+++ b/wp-content/themes/schlemmer/css/scss/_page-blog.scss
@@ -1,5 +1,5 @@
 .inner_blog {
-	padding: 130px 0px 214px;
+	padding: 130px 0px 274px;
   max-width: 1611px;
 	margin-left:auto;
 	margin-right:auto;
@@ -31,7 +31,7 @@
 			}
 			a {
 				border-top:1px solid #9e9e9e;
-				padding:20px 15px;
+				padding:23px 15px 19px;
 				display: block;
 			}
 		}
@@ -53,6 +53,26 @@
 			letter-spacing: 0;
 		}
 	}
+	
+}
+
+
+
+body.single, body.archive {
+	.blog_content_wrapper.content {
+		h1 {
+			font-size: 60px;
+			line-height: 70px; 
+		}
+	}
+}
+
+body.single {
+	.blog_content_wrapper.content {
+		h1 {
+			margin-bottom:54px; 
+		}
+	}
 }
 
 
@@ -65,5 +85,228 @@
 		padding-bottom: 49px;
 		margin-bottom: 33px;
 	}
+	.single_post {
+		border-bottom:1px solid #9e9e9e;
+		padding-bottom: 30px;
+		margin-bottom:55px;
+		&:last-of-type {
+			margin-bottom:0;
+		}
+			}
+	.blog_content {
+		font-size: 17px;
+		line-height: 34px;
+	}
+	a.read_more_button {
+		background: $bluedark;
+		color:$bluelight;
+		text-transform: uppercase;
+		padding:11px 36px 7px;
+		display: inline-block;
+		font-size: 15px;
+		font-family: $gothicdemicondensed;
+		margin:50px 0;
+		letter-spacing: 4px;
+		transition: all .2s ease-in-out;
+		&:hover {
+			background: $bluelight;
+			color:#fff;
+		}
+	}
 }
+
+.meta {
+			font-family: $gothicdemicondensed;
+			text-transform: uppercase;
+			font-size: 14px;
+			letter-spacing: 2.5px;
+			margin-bottom: 38px;
+			margin-top: 24px;
+			line-height: 21px;
+			span.blue, a {
+				color:$bluelight;
+			}
+			a {
+				transition: all .2s ease-in-out;
+				&:hover {
+					color:#9e9e9e;
+				}
+			}
+			ul.post-categories {
+				list-style: none;
+				display: inline;
+				margin:0;
+				padding:0;
+				li {
+					background: none;
+					padding:0;
+					margin:0;
+					letter-spacing: 2.5px;
+					display: inline;
+					&:after {
+						content:",";
+						display: inline-block;
+					}
+					&:last-of-type {
+						&:after {
+							display: none;
+						}
+					}
+					a {
+					
+					}
+				}
+			}
+		}
+
+
+
+#nav_below  {
+	text-transform: uppercase;
+	font-family: $gothicdemicondensed;
+	font-size:15px;
+	letter-spacing: 2.5px;
+	a {
+		color:$bluedark;
+		transition: all .2s ease-in-out;
+		&:hover {
+			color:$bluelight;
+		}
+	}
+	.nav_previous, .nav_next {
+		display: inline-block;
+		padding-left:2.5px;
+	}
+	
+	.nav_next {
+		&:before {
+			content:"|";
+			display: inline-block;
+			margin-right:10px;
+			margin-left:5px;
+			position: relative;
+			top:-1px;
+		}
+	}
+	
+}
+
+
+
+@media screen and (max-width: 1450px) {
+	
+	
+	.blog_content_wrapper.content {
+		padding: 0 0 0 7%;
+	}
+	
+	
+	
+	
+	
+} /* Media Query */
+
+
+
+@media screen and (max-width: 1060px) {
+	
+	
+	.inner_blog {
+		display: flex;
+		flex-direction: column;
+		padding: 65px 0px 124px;
+	}
+	
+	
+	.sidebar.blog {
+		width:100%;
+		float:none;
+	}
+	
+	
+	.blog_content_wrapper.content {
+		width:100%;
+		float:none;
+		padding:0;
+		h1 {
+			font-size: 60px;
+			padding-bottom: 35px;
+		}
+	}
+	
+	
+	.sidebar.blog {
+    margin-top: 52px;
+	}
+	
+	
+} /* Media Query */
+
+
+
+
+@media screen and (max-width: 767px) {
+	
+	
+	
+	.inner_blog {
+		padding: 33px 0px 99px;
+	}
+	
+	
+	
+	
+	body.single, body.archive {
+	.blog_content_wrapper.content {
+		h1 {
+			font-size: 52px;
+			line-height: 55px;
+		}
+	}
+}
+
+
+body.single {
+	.blog_content_wrapper.content {
+		h1 {
+			margin-bottom:34px; 
+		}
+	}
+}
+	
+	
+	
+	
+	.blog_content_wrapper.content {
+		
+		h1 {
+			font-size: 52px;
+			padding-bottom: 30px;
+			margin-bottom: 24px;
+		}
+		.single_post {
+			margin-bottom: 36px;
+			padding-bottom: 10px;
+			
+		}
+	}
+	
+	.sidebar.blog span.sidebar_title {
+    margin-bottom: 25px;
+   }
+	
+	
+	.blog_list {
+    margin-bottom: 56px;
+	}
+	
+	
+	.meta {
+		margin-bottom: 20px;
+		margin-top: 18px;
+	}
+	
+		
+	
+} /* Media Query */
 
