--- a/wp-content/themes/schlemmer/css/scss/_global.scss
+++ b/wp-content/themes/schlemmer/css/scss/_global.scss
@@ -199,10 +199,16 @@ img.aligncenter {
 
 	.content {
    	h1 {
+/*
 	   	font-size: 52px;
 	   	line-height: 55px;
+*/
 	   	margin-bottom: 31px;
 	    padding-bottom: 29px;
+	    
+	    
+	    font-size: 46px;
+			line-height: 49px;
    	}
     p {
 	   
@@ -210,6 +216,7 @@ img.aligncenter {
     h2 {
 	    font-size:30px;
 	    line-height: 35px;
+	    
     }
     blockquote {
 	    font-size:38px;
