--- a/wp-content/themes/schlemmer/css/scss/_page-blog.scss
+++ b/wp-content/themes/schlemmer/css/scss/_page-blog.scss
@@ -259,8 +259,11 @@ body.single {
 	body.single, body.archive {
 	.blog_content_wrapper.content {
 		h1 {
-			font-size: 52px;
-			line-height: 55px;
+			// font-size: 52px;
+			// line-height: 55px;
+			
+			font-size: 46px;
+			line-height: 49px;
 		}
 	}
 }
