--- a/wp-content/themes/schlemmer/css/scss/_page-default.scss
+++ b/wp-content/themes/schlemmer/css/scss/_page-default.scss
@@ -13,6 +13,7 @@
 		font-size: 50px;
 		font-family:$gothicdemicondensed;
 		letter-spacing: 27px;
+		padding-left:27px;
 		display: block;
 		margin-top:8px;
 	}
@@ -173,7 +174,7 @@ span.sidebar_title {
 	span.banner_title {
 		font-size: 40px;
 		letter-spacing: 15px;
-	
+		padding-left:15px;
 	}
 }
 
@@ -218,25 +219,38 @@ span.sidebar_title {
 @media screen and (max-width: 1060px) {
 	
 	
+	.banner {
+		display: none;
+	}
 	
 	
 	
-	
-	body.page-template-page-results {
-		background: url(#{$themePath}images/wavy_line_patterns.jpg) top left repeat;
+	body.page-template-page-results, body.page-template-page-testimonials {
 		.banner {
 			background: none;
 			height:auto;
 			display: block;
 			text-align: center;
 			span.banner_title {
-				color:$bluelight;
+				color:$bluedark;
 				font-size: 30px;
 				margin: 87px 0 90px;
 				letter-spacing: 20px;
+				padding-left:20px;
 			}
 			
 		}
+	}
+	
+	
+	body.page-template-page-results {
+		background: url(#{$themePath}images/wavy_line_patterns.jpg) top left repeat;
+	}
+	
+	
+	
+	body.page-template-page-testimonials {
+		background:#fff;
 	}
 	
 	
@@ -294,7 +308,7 @@ span.sidebar_title {
 	
 	
 	
-	body.page-template-page-results {
+	body.page-template-page-results, body.page-template-page-testimonials {
 		.banner {
 				span.banner_title {
 					margin: 43px 0 90px;
@@ -304,6 +318,10 @@ span.sidebar_title {
 			}
 		}
 	}
+	
+	
+	
+	
 
 	
 	
