--- a/wp-content/themes/schlemmer/css/scss/_page-contact.scss
+++ b/wp-content/themes/schlemmer/css/scss/_page-contact.scss
@@ -28,4 +28,11 @@ body.page-template-page-contact {
 			}
 		}
 	}
+	a.ilawyer_marketing {
+		svg {
+			.ilawyer-cls-1{
+				fill:#fff;
+			}
+		}
+	}
 }
